@@ -163,6 +163,8 @@
 	- Add sanity check to ntfs_inode_close() to detect attempts at closing
 	  extent inodes.
 	- Don't free extent inodes in attrib.c! (Szakacsits Szabolcs)
+	- Return the attribute list attribute when enumerating attributes, too.
+	  Thanks to Szakacsits Szabolcs for pointing this problem out.
 
 12/03/2002 - 1.6.0 - More mkntfs options and cleanups.
 	Fix typo in usage information of mkntfs. Thanks to Richard Russon for
